# hackathon_brainstormer_agent

./: README.md  pyproject.toml
hackathon_brainstormer/: __init__.py  agent.py
hackathon_brainstormer/sub_agents/: __init__.py  ideas_gen_agent.py  scraper_agent.py
hackathon_brainstormer/tools/: __init__.py  scrape.py
